fix button hover not working properly on safari

--- a/fact_page_style.css
+++ b/fact_page_style.css
@@ -3,6 +3,9 @@ html {
   font-family: "Ubuntu", sans-serif;
   font-size: 30px;
 }
+button {
+  cursor: pointer;
+}
 br {
   display: block;
   margin: 15px 0;
